support optional values in html template
* remove explicit calls to set_x("")
* factor out duplicate code in template parser

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -642,13 +642,13 @@
           <!-- TEMPLATE: CONSENSUS_ADAPTER_KMER_ROW -->
           <tr>
             <td>{{INDEX}}</td>
-            <td>{{KMER_1}}</td>
-            <td>{{COUNT_1}}</td>
-            <td>{{PCT_1}}</td>
+            <td>{{OPTIONAL_KMER_1}}</td>
+            <td>{{OPTIONAL_COUNT_1}}</td>
+            <td>{{OPTIONAL_PCT_1}}</td>
             <td></td>
-            <td>{{KMER_2}}</td>
-            <td>{{COUNT_2}}</td>
-            <td>{{PCT_2}}</td>
+            <td>{{OPTIONAL_KMER_2}}</td>
+            <td>{{OPTIONAL_COUNT_2}}</td>
+            <td>{{OPTIONAL_PCT_2}}</td>
           </tr>
           <!-- TEMPLATE: CONSENSUS_ADAPTER_KMER_TAIL -->
         </tbody>
@@ -780,9 +780,9 @@
             <!-- TEMPLATE: DEMULTIPLEXING_ROW -->
 
             <tr>
-              <td>{{N}}</td>
-              <td>{{RAW_BARCODE_1}}</td>
-              <td>{{RAW_BARCODE_2}}</td>
+              <td>{{OPTIONAL_N}}</td>
+              <td>{{OPTIONAL_RAW_BARCODE_1}}</td>
+              <td>{{OPTIONAL_RAW_BARCODE_2}}</td>
               <td>{{RAW_NAME}}</td>
               <td>{{PCT}}</td>
               <td>{{READS}}</td>
